syntax = "proto3";
package nicholasdotsol.duality.dex;

option go_package = "github.com/NicholasDotSol/duality/x/dex/types";
import "dex/pool.proto"; 

// Proto Specification of the tick mapping from key: token0, token1 => to values: poolsZeroToOne, poolsZeroToOne (Pool Arrays). 
// Pool specifics can be found within ./pool.proto
message Ticks {
  string token0 = 1; 
  string token1 = 2; 
  repeated Pool poolsZeroToOne = 3; 
  repeated Pool poolsOneToZero = 4; 
  
}

